# LCFT

./: .gitignore  CMakeLists.txt  LibraryManager.cpp  LibraryManager.h  NetworkManager.cpp  NetworkManager.h  README_QT.md  app_icon.rc  filesystemmodelmanager.cpp  filesystemmodelmanager.h  filetreemodel.cpp  filetreemodel.h  main.cpp
android/: AndroidManifest.xml
qml/: Main.qml
qml/components/: ChatPage.qml  ContactDetailPage.qml  ContactList.qml  ConversationList.qml  FileDetailPage.qml  FileList.qml  FilePickerDialog.qml  IncomingOfferPopup.qml  LeftNavBar.qml  LoginPage.qml  MobileChatHome.qml  MobileDevicePage.qml  TransferDetailPage.qml  TransferList.qml
